# Console_lab

./: .gitignore  README.md  console_app.py  pyproject.toml  pytest.ini
src/: main.py
src/common/: config.py
src/dependencies/: container.py
src/enums/: list_mode.py
src/services/: __init__.py  base.py  history_manager.py  linux_console.py  macos_console.py  undo_manager.py  windows_console.py  workspace_manager.py
test_dir/: TESTING_GUIDE.md  hello_copy.txt  poem.txt  script.sh
test_dir/subfolder/: nested.txt
tests/: conftest.py  test_cli_commands.py  test_container.py  test_history_manager.py  test_macos_console_service.py  test_main_commands_simplified.py  test_undo_manager.py  test_workspace_manager.py
