[project]
name = "console-app-with-logging"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.14.2",
    "typer>=0.20.0",
]

[project.scripts]
app = "console_app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "console_app.py"]

[tool.uv]
package = true
